internal/kgateway/translator/gateway/testutils/inputs/delegation/multiple_parents.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: infra
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
  - matches:
    - path:
        type: PathPrefix
        value: /b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: b
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "foo.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
  - matches:
    - path:
        type: PathPrefix
        value: /b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: b
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: infra
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: Exact
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: a
spec:
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-b
  namespace: b
spec:
  parentRefs:
  - name: example-route
    namespace: infra
    group: gateway.networking.k8s.io
    kind: HTTPRoute
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: /b/.*
    backendRefs:
    - name: svc-b
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: b
spec:
  ports:
    - protocol: TCP
      port: 8080
